# yaya

./: .gitignore  .project  .travis.yml  MainWindow.py  MainWindow.ui  MainWindow_ui.py  README.md  Ui_MainWindow.py  ViewerEditorImage.py  YoloAnnotateQtGui.py  YoloAnnotateQtGui.pyproject  config.example.toml  install.sh  pyproject.toml  requirements.txt  tango_rc.py  yaya-list-annotations.py  yolo-annotate.py  yolo-distribution.py  yolo-resize.py
Decorators/: DecoratorDistributionShowcase.py
Detectors/: DetectorYOLOv4.py  DetectorYoloWorld.py  __init__.py  detector_yolov4_cvdnn.py  detector_yolov8_ultralytics.py
Detectors/common/: Detection.py  Detector.py  Detectors.py  image_strategy.py
Detectors/yolov4/: darknet.py
Gui/: colors.py  drawing.py
ObjectDetectors/: DetectorYOLOv4.py  DetectorYOLOv4COCO.py  DetectorYOLOv4Gpr.py  DetectorYOLOv4custom.py  __init__.py
engine/: GuiClassKeycodes.py  annote.py  annote_enums.py  annoter.py  config_toml.py  dataset.py  gui.py  session.py
helpers/: MarkdownReport.py  QtDrawing.py  Singleton.py  aisp_typing.py  algebra.py  boxes.py  colors.py  detections.py  ensemble_boxes_nms.py  ensemble_boxes_nmw.py  ensemble_boxes_wbf.py  files.py  git.py  gpu.py  hashing.py  images.py  json.py  metrics.py  prefilters.py  selector.py  soft_nms.py  textAnnotations.py  texts.py  transformations.py  visuals.py
icons/: index.theme  tango.qrc
input/: annotations_classified.csv  dataset.txt
models/: annotations_classified.py
scripts/: yolo-annotate.sh
tests/: test_benchmark_nms.py  test_boxes.py  test_gpu.py  test_yolo_world.py
views/: ViewAnnotations.py  ViewDetections.py  ViewFilters.py  ViewImagesSummary.py  ViewImagesTable.py  ViewImagesTableRow.py
yolohelpers/: distribution.py
(+24 files in other folders)
